--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -11,13 +11,21 @@
     "crawler:test": "python api_writer.py",
     "crawler:run": "python crawler_integration.py"
   },
-  "keywords": ["fashion", "catalog", "api"],
+  "keywords": [
+    "fashion",
+    "catalog",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "google-auth-library": "^10.4.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3"
   },
