--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -2,10 +2,10 @@
   "name": "cms",
   "version": "1.0.0",
   "description": "Fashion catalog CMS API",
-  "main": "server.js",
+  "main": "server-REST.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server-REST.js",
+    "dev": "nodemon server-REST.js",
     "db:setup": "node setup-db.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "crawler:test": "python api_writer.py",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "bcrypt": "^6.0.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
